datasets/dataset_txt/scikit_learn/scikit-learn_37.txt
andheartsjaz commented 28 days ago
Description
When calling fit on SVM, several futures warnings came up. triesd to fix using the gamma parameter set to 'scale'
Steps/Code to Reproduce
``` svm = SVR()
svm_cv = GridSearchCV(svm, params, verbose=1)
svm_cv.fit(X_train, y_train)``` error came up
Expected Results
Fitting 3 folds for each of 81 candidates, totalling 243 fits
Actual Results
nda3\lib\site-packages\sklearn\svm\base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.
"avoid this warning.", FutureWarning)
Versions
File "", line 1
For scikit-learn >= 0.20:
^
SyntaxError: invalid syntax